Kameleon CHANGELOG
==================

Version 2.10.10
--------------

Unreleased

- Set kameleon build --microstep-checkpoint option to all by default.
- Rework the kameleon checkpoint documentation.
- Rework the kameleon build options.

Version 2.10.9
--------------

Released on April 27th 2023

- Add the --microstep-checkpoint option to enable creating checkpoint on all microsteps.
- Add timing info for microsteps and microstep checkpoints in verbose mode.
- Minor fixes.
- Enable using a python venv for bumpversion (.gitignore, .envrc)

Version 2.10.8
--------------

Released on October 21st 2022

- Fix a fatal error with the pipe command: make sure the destination context is started.
- Avoid git warning when running kameleon repo update: use git pull --ff-only

Version 2.10.7
--------------

Released on December 02nd 2021

- Add support for the .filter file to filter recipes/template lists

Version 2.10.6
--------------

Released on November 24th 2021

- Add the option filter for the template and recipe listings
- Preserve permission of files when importing template

Version 2.10.5
--------------

Released on July 29th 2021

- Remove polipo from the software dependencies as it is not maintained anymore. This breaks the caching feature.
- Some changes to allow a debian packaging.
- Update authors.
- Change the version information file and update scripts accordingly.

Version 2.10.4
--------------

Released on May 11th 2020

- Fix support for extend ERB
- Add the `kameleon template erb` command
- Fix bash completion
- Cosmetic code fixes

Version 2.10.3
--------------

Released on April 10th 2020

- Rework kameleon template list: add color add progress bar
- Make bash completion understand the subcommands
- Fix the command help ->  `kameleon <command> -h`
- Add support for custom extend erb templates

Version 2.10.2
--------------

Released on April 09th 2020

- Fix cli help for the repository and template sub-commands