@@ -9,6 +9,7 @@ Unreleased
 - Set kameleon build --microstep-checkpoint option to all by default.
 - Rework the kameleon checkpoint documentation.
 - Rework the kameleon build options.
+- Add the on_checkpoint=only keywork, allowing a step to be run only when checkpoint is activated
 
 Version 2.10.9
 --------------
